--- a/src/app/main/projects-preview/projects-preview.component.html
+++ b/src/app/main/projects-preview/projects-preview.component.html
@@ -5,7 +5,7 @@
   <div class="grid-container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 grid-section">
       <div class="col">
-        <a routerLink="/project-one"><app-project-square-preview title="Deportes" description="(Supervised - Linear)" imageRoute="../../../assets/pdtest/Sports.jpg"></app-project-square-preview></a>
+        <a routerLink="/project-one"><app-project-square-preview title="ChatFacts" description="(Angular - SSR - Vercel - SEO)" imageRoute="../../../assets/Chatfacts/preview.png"></app-project-square-preview></a>
       </div>
       <div class="col">
         <a routerLink="/project-two"><app-project-square-preview title="2do Ataque al Corazón" description="(Supervised - Logistic Regression)" imageRoute="../../../assets/HeartCase/heart.webp"></app-project-square-preview></a>
