--- a/src/app/projects-views/pv-chatfacts/pv-chatfacts.component.html
+++ b/src/app/projects-views/pv-chatfacts/pv-chatfacts.component.html
@@ -2,13 +2,44 @@
   <app-text-section title="ChatFacts"></app-text-section>
   <app-subtitle-text-section
     title="Descripción"
-    text="Chatfacts es una aplicación web que permite en base a un chat de WhatsApp, analizar todos los mensajes en él, descubriendo
+    text="ChatFacts es una aplicación web que permite en base a un chat de WhatsApp, analizar todos los mensajes en él, descubriendo
     ciertas características o datos sobre lo hablado en el chat."
+  ></app-subtitle-text-section>
+  <div class="tags-container">
+    <app-tag text="Angular"></app-tag>
+    <app-tag text="TypeScript"></app-tag>
+    <app-tag text="HTML"></app-tag>
+    <app-tag text="CSS"></app-tag>
+    <app-tag text="SSR"></app-tag>
+    <app-tag text="Vercel"></app-tag>
+    <app-tag text="SEO"></app-tag>
+  </div>
+  <app-subtitle-text-section
+    title="Sobre el proyecto"
+    text="La idea surge tras querer ver cuantos mensajes tenía con algunas persona y grupos en WhatsApp.	
+    Por ende se comenzó creando un simple script para lograr solo esa funcionalidad.
+    Posteriormente se decidió hacer una aplicación web para que cualquier persona pudiera usarlo agregando más funcionalidades.
+    La aplicación web fue creada con Angular, y se decidió crearla con SSR para mejorar el SEO y mejorar las posibilidades de indexación,
+    permitiendo a los crawrlers reconocer el contenido.
+    Gracias a esto se logró que personas de diferentes países como España, Colombia, México, Ecuador pudieran dar uso de la web."
   ></app-subtitle-text-section>
   <app-image-content
     imageRoute="../../../assets/Chatfacts/guide.PNG"
   ></app-image-content>
+
   <app-image-content
     imageRoute="../../../assets/Chatfacts/msg-x-persona.PNG"
+  ></app-image-content>
+
+  <app-image-content
+    imageRoute="../../../assets/Chatfacts/emojis.PNG"
+  ></app-image-content>
+
+  <app-image-content
+    imageRoute="../../../assets/Chatfacts/mensaje-mas-largo.PNG"
+  ></app-image-content>
+
+  <app-image-content
+    imageRoute="../../../assets/Chatfacts/multimedia-x-persona.PNG"
   ></app-image-content>
 </div>
