--- a/src/app/projects-views/pv-chatfacts/pv-chatfacts.component.css
+++ b/src/app/projects-views/pv-chatfacts/pv-chatfacts.component.css
@@ -3,9 +3,27 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     margin-top: 100px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.tags-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:stretch;
+    flex-wrap: wrap;
+}
+
+app-tag{
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+app-image-content:last-child{
+    margin-bottom: 10px;
 }
